src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-omT-dwF1000-dhP0.5-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen maximized: true\ndefault column width: F1000\ndefault window height: P0.5\nwant fullscreen: AU\ntabbed"
expression: snapshot
---
initial configure:
size: 1239 × 336, bounds: 1239 × 688, states: []

post-map configures:
size: 1239 × 336, bounds: 1239 × 688, states: []
size: 1239 × 336, bounds: 1239 × 688, states: [Activated]
